--- a/index.html
+++ b/index.html
@@ -5,10 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fate View Checklist</title>
     <link rel="icon" type="image/png" href="./assets/img/fate_logo.png">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <script src="./assets/data/data.js"></script>
-    <script src="./assets/js/utils.js"></script>
-    <script src="./assets/js/app.js"></script>
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <script type="module" src="./assets/js/core/app.js"></script>
 </head>
 <body>
     <div class="container">
