Barra de progreso refactorizada con la nueva etiqueta progress

--- a/index.html
+++ b/index.html
@@ -44,9 +44,7 @@
 
     <footer class="total-progress">
         <h3>Progreso Total</h3>
-        <section class="progress-bar">
-            <div class="progress-fill" id="total-progress-bar" style="width: 0%"></div>
-        </section>
+        <progress id="complete-progress-bar" class="progress-bar" value="0" max="100"></progress>
         <section class="stats">
             <article class="stat">
                 <p class="stat-number" id="completed-items">0</p>
