Nueva funcionalidad de reseteo de la franquicia en localStorage

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                 <li><a href="#" id="export-btn">Exportar</a></li>
                 <li><a href="#" id="import-btn">Importar</a></li>
                 <li><input type="file" id="file-input" accept=".json"></li>
+                <li><a href="#" id="reset-memory-btn">Borrar memoria</a></li>
                 <li><hr class="link-separator"></li>
             </ul>
         </details>
