Index modificado, para implementar título dinámico, para un futuro soporte multifranquicia

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fate View Checklist</title>
+    <title>View Checklist</title>
     <link rel="icon" type="image/png" href="./assets/img/fate_logo.png">
     <link rel="stylesheet" href="./assets/css/style.css">
     <script type="module" src="./assets/js/core/app.js"></script>
@@ -27,8 +27,8 @@
                 <li><hr class="link-separator"></li>
             </ul>
         </details>
-        <h1>Fate View Checklist</h1>
-        <p>Seguimiento de tu progreso en el universo Fate</p>
+        <h1><span id="franchise-main-title"></span> View Checklist</h1>
+        <p>Seguimiento de tu progreso en el universo <span id="franchise-text"></span></p>
         <button class="theme-toggle" id="themeToggle">🌙</button>
     </header>
 
