--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
             </summary>
             <ul>
                 <li><hr class="link-separator"></li>
-                <li><a href="#" id="export-btn">Exportar</a></li>
-                <li><a href="#" id="import-btn">Importar</a></li>
                 <li><input type="file" id="file-input" accept=".json"></li>
+                <li><a href="#" id="import-btn">Importar</a></li>
+                <li><a href="#" id="export-btn">Exportar</a></li>
+                <li><a href="#" id="report-btn">Generar Reporte</a></li>
                 <li><a href="#" id="reset-memory-btn">Borrar memoria</a></li>
                 <li><a href="#" id="reset-progress-btn">Resetear progreso</a></li>
                 <li><hr class="link-separator"></li>
