Versión base para la apertura del modal de ayuda

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                 <li><a href="#" id="report-btn">Generar Reporte</a></li>
                 <li><a href="#" id="reset-memory-btn">Borrar memoria</a></li>
                 <li><a href="#" id="reset-progress-btn">Resetear progreso</a></li>
+                <li><a href="#" id="help-btn">Ayuda</a></li>
                 <li><hr class="link-separator"></li>
             </ul>
         </details>
