--- a/index.html
+++ b/index.html
@@ -134,8 +134,7 @@
       ]
     }
   ]
-}
-                    </code></pre>
+}</code></pre>
                 </details>
                 <!-- ⚠️ SOLUCIÓN DE PROBLEMAS -->
                 <details>
