Modificado modalSectionHandler, para dinamizar los aria de las etiquetas

--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
         </section>
     </footer>
 
-    <dialog class="modal" id="multifunction-modal" aria-labelledby="modal-title" role="dialog" aria-hidden="true">
+    <dialog class="modal" id="multifunction-modal"  role="dialog" aria-hidden="true">
         
         <!-- SECCIÓN CONFIRMACIÓN -->
         <section id="confirm-section" class="modal-section" hidden aria-hidden="true">
             <header class="confirm-header">
-                <h3>Confirmar acción</h3>
+                <h3 id="confirm-title">Confirmar acción</h3>
             </header>
             <article class="confirm-content">
                 <p id="confirm-message"><!-- Mensaje dinámico específico --></p>
@@ -92,7 +92,7 @@
 
         <section id="help-section" class="modal-section" hidden>
             <header class="help-header">
-                <h3>🛠️ Centro de Ayuda</h3>
+                <h3 id="help-title">🛠️ Centro de Ayuda</h3>
             </header>
             
             <article class="help-content">
