Agregado dataset dinámico al bonón de confirmacion, para decidir su funcionalidad de acuerod  a los mismos

--- a/index.html
+++ b/index.html
@@ -74,11 +74,12 @@
             </header>
             <article class="confirm-content">
                 <p id="confirm-message"><!-- Mensaje dinámico específico --></p>
-                <p>Se perderán los cambios no guardados. ¿Estás seguro de que quieres continuar?</p>
+                <p>Se perderán los cambios no guardados.</p>
+                <p>¿Estás seguro de que deseas continuar?</p>
                 <footer class="modal-buttons">
             </article>
             <footer class="confirm-footer">
-                <button class="btn-confirm" id="confirm-action-btn">Confirmar</button>
+                <button class="btn-confirm" id="confirm-action-btn" data-action="">Confirmar</button>
                 <button class="btn-cancel" id="cancel-action-btn">Cancelar</button>
             </footer>
         </section>
