Agregado selector de franqucias al modal

--- a/index.html
+++ b/index.html
@@ -156,6 +156,21 @@
             </footer>
         </section>
 
+        <section  id="selection-section" class="modal-section"  hidden aria-hidden="true">
+            <form>
+                <label for="franchise-select">Selecciona tu franquicia:</label>
+                <select id="franchise-select">
+                    <option disabled selected>Selecciona una franquicia</option>
+                    <option value="fate">Fate</option>
+                    <option value="fate2">Fate 2</option>
+                    <option value="assistence">Asistencia</option>
+                </select>
+                    <button class="btn-modal" id="se3ect-franchise-btn" data-action="">
+                        Seleccionar
+                    </button>
+            </form>
+        </section>
+
     </dialog>
     <aside class="notification" id="notification">
         Operación realizada con éxito
