Corrgido error de typo

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                     <option value="fate2">Fate 2</option>
                     <option value="assistence">Asistencia</option>
                 </select>
-                    <button class="btn-modal" id="se3ect-franchise-btn" data-action="">
+                    <button class="btn-modal" id="select-franchise-btn">
                         Seleccionar
                     </button>
             </form>
