--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 <li><a href="#" id="export-btn">Exportar</a></li>
                 <li><a href="#" id="import-btn">Importar</a></li>
                 <li><hr class="link-separator"></li>
+                <li><a href="#" id="change-franchise-btn">Cambiar franquicia</a></li>
                 <li><a href="#" id="reset-progress-btn">Resetear progreso</a></li>
                 <li><a href="#" id="reset-memory-btn">Borrar memoria</a></li>
                 <li><hr class="link-separator"></li>
