Agregados estilos básicos al modal de franquicia

--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
             <button class="btn-close" id="dynamic-close-btn">Cerrar</button>
         </section>
 
+        <!-- SECCIÓN DE AYUDA -->
         <section id="help-section" class="modal-section" hidden>
             <header class="help-header">
                 <h3 id="help-title">🛠️ Centro de Ayuda</h3>
@@ -157,8 +158,9 @@
             </footer>
         </section>
 
+        <!-- SECCIÓN DE SELECCIÓN DE FRANQUICIA -->
         <section  id="selection-section" class="modal-section"  hidden aria-hidden="true">
-            <form>
+            <form style="display: flex; flex-direction: column; gap: 30px;">
                 <label for="franchise-select">Selecciona tu franquicia:</label>
                 <select id="franchise-select">
                     <option disabled selected>Selecciona una franquicia</option>
