Eliminados estilos inline

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 
         <!-- SECCIÓN DE SELECCIÓN DE FRANQUICIA -->
         <section  id="selection-section" class="modal-section"  hidden aria-hidden="true">
-            <form style="display: flex; flex-direction: column; gap: 30px;">
+            <form>
                 <label for="franchise-select">Selecciona tu franquicia:</label>
                 <select id="franchise-select">
                     <option disabled selected>Selecciona una franquicia</option>
